tests/type/errors/bad_underscore.typedsol
3:2 error: Mismatched types for assignment
